--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,11 @@
 			<artifactId>jakarta.mail</artifactId>
 			<version>2.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.38</version>
+		</dependency>
 
-		
 	</dependencies>
 </project>
